--- a/链接预测大纲.md
+++ b/链接预测大纲.md
@@ -21,7 +21,7 @@
 
 然后进行负采样，得到负样本数据，目前的负采样比例为1：1.
 
-之后将正样本和负样本数据输入编码器中，编码器采用基于GNN的图嵌入方式，由两层RGCN组成。采用GCN的原因，是想在图嵌入过程中更好的考虑邻居节点的特征。
+之后将正样本和负样本数据输入编码器中，编码器采用基于GNN的图嵌入方式，由两层RGCN组成，可以在图嵌入过程中可以利用两跳以内的邻居实体的信息。
 
 之后将节点的嵌入表示使用DistMult进行打分，这里有一个前提，即假设知识图谱中的关系为对称关系，但其实是有一定偏差的，后续可以换成替他的打分策略，比如基于GNN的打分策略。
 
@@ -33,9 +33,21 @@
 
 应用场景:
 
-难点,亮点: 对数据，应用场景进行分析，选取合适的技术。GNN。知识图谱的完备性
+难点,亮点:
 
-不足: 在特征编码，打分函数部分存在改进空间
+对数据，应用场景进行具体分析，选取合适的技术。
+
+使用知识图谱表示学习方法，结合GNN，解决问题。
+
+提高了知识图谱的完备性。
+
+不足和改进方向:
+
+在特征编码方面使用Index编码方法，也尝试过One hot编码，但是因为特征维度太大，遇到了内存不足的问题
+
+在图嵌入学习方面：RGCN对同一种关系共享参数，区分程度不高，可以引入注意力机制
+
+在打分函数方面：是有一个对称关系假设，和实际有偏差，可以采用其他的打分函数，例如Conv-TransE的打分函数
 
 后续工作：
 
@@ -43,3 +55,8 @@
 
 之后基于目前的图嵌入，可以设计其他的下游任务，如果有时间的话计划尝试一下基于图嵌入的多跳KGQA
 
+隐名股东：
+
+Zero-Shot
+
+生成样本，正，负样本
